2022-09-12  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor.py:

	  - Renamed from clock_sensor_esp32.py

	* conf/clock_sensor/clock_sensor_rp2040.conf:

	  - Renamed from clock_sensor_picow.conf

	* apps/clock_sensor/standalone_sensor_esp32.py:
	* conf/clock_sensor/standalone_sensor_esp8266.conf:

	  - Deleted. No logner needed as clock_sensor.py can be configured to
	    run without a display.


2022-09-12  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* conf/clock_sensor/clock_sensor_esp8266_nodisplay.conf:

	  - Added new no-display sample config.

	* conf/clock_sensor/clock_sensor_esp8266.conf:
	* conf/clock_sensor/clock_sensor_picow.conf:

	  - Cleanup.


2022-09-11  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - I2CDisplay: now forces full initial update.

	  - Periodic: removed the now unused param in tick() and _fire().

	  - I2CDisplay and WS now register their set() methods as listeners
	    to the sensors.

	  - Periodic: tick() and _fire() now takes a now argument.

	  - I2CDisplay: new set() method to set sensor data independently from
	    scheduled tick updates.


2022-09-11  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/webserver.py:

	  - Added set() and clear() webserver methods for setting and clearing
	    request map.

	  - webserver constructor no longer take request map as argument

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - WS: Use webserver set() method.


2022-09-10  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - WS() will now only do string replacements for variables that are
	    actually referenced by the configured template.


2022-09-09  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/xconfig.py:

	  - Module will no longer automatically parse and load config into
	    internal dict. There is now an option to parse config on demand